--- a/Application/src/app/pages/add-product/add-product.component.scss
+++ b/Application/src/app/pages/add-product/add-product.component.scss
@@ -1,5 +1,5 @@
 .form-field {
-  width: 200px;
+  width: 100%;
 }
 
 .form-content {
@@ -13,7 +13,7 @@
 .form-container {
   display: flex;
   flex-direction: column;
-  width: 750px;
+  width: 500px;
   margin: auto;
 }
 
