--- a/Application/src/app/pages/add-product/add-product.component.html
+++ b/Application/src/app/pages/add-product/add-product.component.html
@@ -52,10 +52,7 @@
       <input matInput type="number" [(ngModel)]="newProduct.warrantyYears" />
     </mat-form-field>
 
-    <mat-slide-toggle
-      color="secondary"
-      [(ngModel)]="newProduct.available"
-    >
+    <mat-slide-toggle color="secondary" [(ngModel)]="newProduct.available">
       Disponible
     </mat-slide-toggle>
   </div>
