feat: add product use the new component

--- a/Application/src/app/pages/add-product/add-product.component.html
+++ b/Application/src/app/pages/add-product/add-product.component.html
@@ -10,61 +10,5 @@
 
 <div class="form-container">
   <h2>Produit à ajouter</h2>
-
-  <div class="form-content">
-    <mat-form-field class="form-field">
-      <mat-label>Nom</mat-label>
-      <input matInput type="text" [(ngModel)]="newProduct.name" />
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-      <mat-label>Type de produit</mat-label>
-      <mat-select [(ngModel)]="newProduct.type">
-        <mat-option value="phone">Téléphone</mat-option>
-        <mat-option value="computer">Ordinateur</mat-option>
-      </mat-select>
-    </mat-form-field>
-
-    <mat-form-field class="form-field">
-      <mat-label>Prix</mat-label>
-      <input
-        matInput
-        type="number"
-        step="0.01"
-        [(ngModel)]="newProduct.price"
-      />
-    </mat-form-field>
-
-    <mat-form-field class="form-field">
-      <mat-label>Note (sur 5)</mat-label>
-      <input
-        matInput
-        type="number"
-        step="0.1"
-        max="5"
-        min="0"
-        [(ngModel)]="newProduct.rating"
-      />
-    </mat-form-field>
-
-    <mat-form-field class="form-field">
-      <mat-label>Nombre d'année de garantie</mat-label>
-      <input matInput type="number" [(ngModel)]="newProduct.warrantyYears" />
-    </mat-form-field>
-
-    <mat-slide-toggle color="secondary" [(ngModel)]="newProduct.available">
-      Disponible
-    </mat-slide-toggle>
-  </div>
-
-  <div class="nav-button-container">
-    <button
-      mat-raised-button
-      class="add-product-button"
-      (click)="addProduct()"
-      color="primary"
-    >
-      Ajouter
-    </button>
-  </div>
+  <app-product-form [product]="newProduct" (validateEvent)="addProduct($event)"></app-product-form>
 </div>
