--- a/Application/src/app/pages/modify-product/modify-product.component.html
+++ b/Application/src/app/pages/modify-product/modify-product.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <h1>Ajout de produit</h1>
+    <h1>Modification d'un produit</h1>
   </mat-toolbar>
   
   <div class="nav-button-container">
