fix: camelcase for warranty

--- a/Application/src/app/components/product-form/product-form.component.html
+++ b/Application/src/app/components/product-form/product-form.component.html
@@ -31,7 +31,7 @@
 
     <mat-form-field class="form-field">
         <mat-label>Nombre d'année de garantie</mat-label>
-        <input matInput type="number" [(ngModel)]="product.warrantyYears" />
+        <input matInput type="number" [(ngModel)]="product.warranty_years" />
     </mat-form-field>
 
     <mat-slide-toggle color="secondary" [(ngModel)]="product.available">
