--- a/Application/src/app/pages/products/products.component.html
+++ b/Application/src/app/pages/products/products.component.html
@@ -26,7 +26,7 @@
                         <div class="product-rating">/5</div>
                     </div>
                     <div class="product-warranty">
-                        Garantie {{ product.warrantyYears }} ans
+                        Garantie {{ product.warranty_years }} ans
                     </div>
                     <div class="product-available">
                         <ng-container
